# ComfyUI-ScheduledGuider-Ext

./: README.MD  __init__.py  pyproject.toml
.github/workflows/: publish.yml
guiders/: SheduledGuider.py
shedulers/: __init__.py  arctan.py  cosine_scheduler.py  gaussian.py  lognormal.py  x_inverse.py
sigmas/: __init__.py  add_zsnr_sigma.py  concat_sigmas.py  invert_sigmas.py  logarithm.py  offset_sigmas.py  power.py  split_by_value.py
