[project]
name = "comfyui-scheduledguider-ext"
description = "This extension contains various nodes for CFG scheduling and more. NODES:ScheduledCFGGuider, PerpNegScheduledCFGGuider, CosineScheduler, GaussianScheduler, LogNormalScheduler, InvertSigmas, ConcatSigmas, OffsetSigmas, SplitSigmasByValue"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/mfg637/ComfyUI-ScheduledGuider-Ext"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mfg637"
DisplayName = "ComfyUI-ScheduledGuider-Ext"
Icon = ""
